# confusepp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
examples/: example_confusepp.cpp  example_main.cpp  test.conf
include/: config.h  confuse_config.h  confuse_elements.h  confusepp.h  elements.h
src/: config.cpp  confuse_config.cpp  confuse_elements.cpp  elements.cpp  main.cpp
tests/: catch.hpp  test.conf  tests-confusepp.cpp  tests.conf
